EHNCP-1776	Server and Client IPs are incorrect in NAT environments.